Fix overflow issue

--- a/public/styles.scss
+++ b/public/styles.scss
@@ -14,10 +14,9 @@ body {
   top: 0;
   width: 100%;
   height: 100%;
-  margin: 0;
   overflow: hidden;
-  padding: 1rem;
   box-sizing: border-box;
+  padding: 1rem;
 }
 
 #info {
@@ -45,6 +44,7 @@ body {
   height: 100%;
   width: 100%;
   box-sizing: border-box;
+  padding: 1rem;
 
   > * {
     fill: white;
@@ -308,7 +308,6 @@ body {
   body {
     grid-template-columns: 40% 60%;
     grid-template-rows: min-content auto 1fr;
-    column-gap: .5rem;
     
     > * {
       box-sizing: border-box;
